// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HealthIndicator proxy status section renders the degraded workloads 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1mg4zkk"
  content={
    <div>
      <strong>
        Degraded
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": {
              "items": [
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-degraded",
                        "color": "var(--pf-t--global--color--status--warning--default)",
                        "icon": [Function],
                        "name": "Degraded",
                        "priority": 3,
                      },
                      "text": "A: 2 / 2 (1 proxy unsynced)",
                    },
                  ],
                  "status": {
                    "className": "icon-degraded",
                    "color": "var(--pf-t--global--color--status--warning--default)",
                    "icon": [Function],
                    "name": "Degraded",
                    "priority": 3,
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--global--text--color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--global--text--color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": {
                    "className": "icon-na",
                    "color": "var(--pf-t--global--text--color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": {
                "status": {
                  "className": "icon-na",
                  "color": "var(--pf-t--global--text--color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                "value": -1,
              },
            },
            "requests": {
              "healthAnnotations": {},
              "inbound": {},
              "outbound": {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-degraded kiali_f16kwi98"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </span>
</Tooltip>
`;

exports[`HealthIndicator renders healthy 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1mg4zkk"
  content={
    <div>
      <strong>
        Healthy
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": {
              "items": [
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--color--status--success--default)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "A: 1 / 1",
                    },
                    {
                      "status": {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--color--status--success--default)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": {
                    "className": "icon-healthy",
                    "color": "var(--pf-t--global--color--status--success--default)",
                    "icon": [Function],
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--global--text--color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--global--text--color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": {
                    "className": "icon-na",
                    "color": "var(--pf-t--global--text--color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": {
                "status": {
                  "className": "icon-na",
                  "color": "var(--pf-t--global--text--color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                "value": -1,
              },
            },
            "requests": {
              "healthAnnotations": {},
              "inbound": {},
              "outbound": {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-healthy kiali_f1jms4md"
    >
      <CheckCircleIcon />
    </Icon>
  </span>
</Tooltip>
`;
